[tool.poetry]
name = "joystick"
version = "0.1.0"
description = "joystick package for kivy"
authors = ["Dire Peacock <dire.d.peacock@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
